--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
+    "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
