--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-directives": "node dist/angular-directives/server/server.mjs"
+    "serve:ssr:angular-directives": "node dist/angular-directives/server/server.mjs",
+    "server": "json-server ./server/db.json --watch"
   },
   "private": true,
   "dependencies": {
